# tadmetric

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  concepts.md  examples.md  index.md
src/tadmetric/: __init__.py  _typing.py  adjusted.py  composite.py  converters.py  curves.py  delay.py  event.py  intervals.py  main.py  metrics.py  point.py  threshold.py  validation.py
tests/: test_evaluator_api.py  test_main.py
